# app/Models/Product.php
@@ -4,7 +4,7 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
-
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 class Product extends Model
 {
     /** @use HasFactory<\Database\Factories\ProductFactory> */
@@ -12,7 +12,7 @@ class Product extends Model
 
     protected $fillable = ['name', 'description', 'price', 'stock', 'image', 'active'];
     
-    public function categories()
+    public function categories(): BelongsToMany
 {
     return $this->belongsToMany(Category::class)
         ->withPivot('active')
