# app/Models/Service.php
@@ -4,7 +4,7 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
-
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 class Service extends Model
 {
     /** @use HasFactory<\Database\Factories\ServiceFactory> */
@@ -17,13 +17,13 @@ class Service extends Model
         'price',
         'active'
     ];
-   
-    public function categories()
+
+    public function categories(): BelongsToMany
     {
-        return $this->belongsToMany(Category::class)
-            ->withPivot('active')
-            ->withTimestamps()
-            ->where('category_service.active', 1);
+        return $this->belongsToMany(Category::class);
+            // ->withPivot('active')
+            // ->withTimestamps()
+            // ->where('category_service.active', 1);
     }
 
 }
